--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -168,7 +168,7 @@ img {
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     background-color: var(--main-color);
     color: var(--second-color);
@@ -190,4 +190,35 @@ img {
 .hidden {
     visibility: hidden;
     opacity: 0;
+}
+
+
+/*********************************Botton Theme Dark*****************************************************/
+
+.dark-theme-btn {
+    position: fixed;
+    z-index: 999;
+    bottom: 1vh;
+    left: 1vw;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: var(--main-color);
+    color: var(--second-color);
+    cursor: pointer;
+    outline: 0;
+    border: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.dark-theme-btn:hover {
+    background-color: var(--second-color);
+    color: var(--main-color);
+}
+
+.dark-mode {
+    background-color: var(--second-color);
+    color: var(--main-color);
 }
