--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -222,3 +222,24 @@ img {
     background-color: var(--second-color);
     color: var(--main-color);
 }
+
+
+/*********Network Status****************/
+
+.online,
+.offline {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    padding: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    background-color: #1b5e20;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+
+.offline {
+    background-color: #b71c1c;
+}
