--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -244,3 +244,36 @@ img {
 .offline {
     background-color: #b71c1c;
 }
+
+
+/****************************************SearchFilter*************************************************/
+
+
+/* Hiding the filter div. */
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.card {
+    background-color: var(--second-color);
+    color: var(--main-color);
+    transition: all 0.3s ease-out;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+}
+
+.card figcaption {
+    padding: 1rem;
+}
+
+.filter {
+    /* display: none; */
+    visibility: hidden;
+    opacity: 0;
+    order: 1;
+}
